# HRS

./: .env.example  .gitignore  Dockerfile  Dockerfile.conda  README.md  app.py  bbb.txt  combine_job.sh  embed_job.sh  environment.yml  feature_extraction.ipynb  gemini_provider.py  llm_provider.py  llm_providers.py  llm_service.py  microbiologyevents_feature_extraction.ipynb  openai_provider.py  pipeline_job.sh  pyproject.toml  rag_service.py  requirements.txt  submit_all.sh
EHR/: config.yaml  generic_pipeline.py  mimic4_pipeline.py  unzip_files.py
LLM/: __init__.py  llm_service.py
MyTestProj/: README.md  __init__.py
P-CAFE/: README.md  requirements.txt
P-CAFE/data/: eICU.ipynb  mimicIII_Costs.py  mimicIII_multimodal_dataset.ipynb
P-CAFE/docs/: CONFIGURATION.md
P-CAFE/src/: base_config.json  embedder_guesser.py  pcafe_utils.py  user_config.json
P-CAFE/tests/: README.md  __init__.py
PyHealthTest/: README.md  demo_workflow.py  mimic4_mortality_benchmark.py
RAG/: __init__.py  rag_service.py
config/: base_config.json  config.yaml  micro_panel_config.yaml  preprocessing.yaml  reward_model.yaml
data/features/: features_chartevents.csv  features_microbiologyevents.csv  icd_diagnoses_features.csv
docs/: CDSS-ML.md  CONFIGURATION.md  P-CAFE.md  microbiology_comments_cleaning_spec.md  microbiology_panel_mapping.md  mimic4_feature_set.md
ex2/: develop.txt
ex3/: ex3.py
notebooks/: chartevents_feature_extraction.ipynb  copilot-prompt-micro-comments-analysis.md  copilot-prompt-micro-comments-deep-analysis.md  copilot-prompt-micro-eda-30panels.md  copilot-prompt-micro-notebook-final-fixes.md  copilot-prompt-micro-panels-fix-combos-round2.md  copilot-prompt-micro-panels-fix-combos-round3.md  copilot-prompt-micro-panels-fix-combos.md  copilot-prompt-micro-panels-fix-round4-fulldata.md  copilot-prompt-micro-panels-fix-round5-final.md  copilot-prompt-micro-panels-fix-round6-final.md  copilot-prompt-notebook-37panel-full-update.md  copilot-prompt-panels37-final-fix.md  demographic_feature_exploration.ipynb  exploration_job.sh  icd_diagnoses_feature_extraction.ipynb  labevents_feature_extraction.ipynb  microbiologyevents_feature_extraction.ipynb  mimic4_data_exploration.ipynb  mimic4_labevents_exploration.ipynb  mimic4_microbiology_exploration.ipynb  notes_exploration.ipynb
notebooks/mimic3/: mimicIII_Numeric.ipynb
notebooks/mimic4/: chartevents_feature_extraction.ipynb  demographic_feature_exploration.ipynb  exploration_job.sh  exploration_manual.md  icd_diagnoses_feature_extraction.ipynb  labevents_feature_extraction.ipynb  microbiologyevents_feature_extraction.ipynb  mimic4_chartevents_exploration.ipynb  mimic4_data_exploration.ipynb  mimic4_feature_impact_exploration.ipynb  (+4 more)
preprocessing/: create_splits.py  extract_demographics.py  extract_discharge_history.py  extract_y_data.py  run_pipeline.py
src/: __init__.py
templates/: index.html  output.html
tests/: __init__.py  test_agent_args.py  test_data_loader.py  test_input_rel_path.py  test_llm_service.py  test_load_config.py  test_main_robust_config.py  test_medical_knowledge.py  test_pcafe_utils.py  test_preprocessing_pipeline.py  test_rag_service.py  test_reward_model.py  test_utils.py
(+129 files in other folders)
